<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dzikir_pagi.C_Al_Falaq_Fragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="end"
                android:text="@string/dzikir_pagi"
                android:textSize="18sp" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="end"
                android:text="@string/membaca_al_falaq" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="end"
                android:text="@string/dibaca_3x"
                android:textSize="18sp" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/bismillah" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:justificationMode="inter_word"
                android:text="@string/arti_bismillah"
                android:textColor="@color/black"
                android:textStyle="italic" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"
                android:text="@string/al_falaq" />

            <TextView
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:justificationMode="inter_word"
                android:text="@string/arti_al_falaq"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins_regular"
                android:justificationMode="inter_word"
                android:text="@string/faeadh_al_falaq" />

            <TextView
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/hadits_al_falaq" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>