<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dzikir_pagi.E_Doa_Perlinungan_Fragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="end"
                android:text="@string/dzikir_pagi"
                android:textSize="18sp" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="end"
                android:text="@string/membaca_doa_perlindungan" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="end"
                android:text="@string/dibaca_1x"
                android:textSize="18sp" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"
                android:text="@string/doa_perlinungan" />

            <TextView
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:justificationMode="inter_word"
                android:text="@string/arti_doa_perlindungan"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins_regular"
                android:justificationMode="inter_word"
                android:text="@string/faedah_doa_perlindungan" />

            <TextView
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/hadits_an_naas" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</FrameLayout>