<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dzikir_pagi.F_DoaBerserah_Diri_Fragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="end"
                android:text="@string/dzikir_pagi"
                android:textSize="18sp" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="end"
                android:text="@string/memabca_doa_berserah_diri" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="end"
                android:text="dibaca 1x"
                android:textSize="18sp" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"
                android:text="@string/doa_berserah_diri" />

            <TextView
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:justificationMode="inter_word"
                android:text="@string/arti_doa_berserah_diri"
                android:textStyle="italic" />

            <TextView
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/hadits_doa_berserah_diri" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>